erDiagram
    SUCURSAL_F3_EAM_S3 {
        NUMERIC SUCURSAL_ID PK
        VARCHAR CLAVE
        BIT ES_TALLER
        BIT ES_VENTA
        VARCHAR NOMBRE
        FLOAT LATITUD
        FLOAT LONGITUD
        VARCHAR URL
    }

    SUCURSAL_TALLER_F3_EAM_S3 {
        NUMERIC SUCURSAL_ID PK, FK
        NUMERIC DIA_DESCANSO
        VARCHAR TELEFONO_ATENCION
    }

    SUCURSAL_VENTA_F3_EAM_S3 {
        NUMERIC SUCURSAL_ID PK, FK
        TIME HORA_APERTURA
        TIME HORA_CIERRE
    }

    LAPTOP_F3_EAM_S3 {
        NUMERIC LAPTOP_ID PK
        VARCHAR NUM_SERIE
        NUMERIC CANTIDAD_RAM
        VARCHAR CARACTERISTICAS_EXTRAS
        NUMERIC TIPO_TARJETA_VIDEO_ID FK
        NUMERIC TIPO_PROCESADOR_ID FK
        NUMERIC TIPO_ALMACENAMIENTO_ID FK
        NUMERIC TIPO_MONITOR_ID FK
        NUMERIC LAPTOP_REEMPLAZO_ID "Native"
    }

    LAPTOP_INVENTARIO_F1_EAM_S3 {
        NUMERIC LAPTOP_ID PK
        VARCHAR RFC_CLIENTE
        VARCHAR NUM_TARJETA
    }

    SERVICIO_LAPTOP_F3_EAM_S3 {
        NUMERIC NUM_SERVICIO PK
        NUMERIC LAPTOP_ID PK
        NUMERIC IMPORTE
        VARCHAR DIAGNOSTICO
        BLOB FACTURA
        NUMERIC SUCURSAL_ID FK
    }

    STATUS_LAPTOP {
        NUMERIC STATUS_LAPTOP_ID PK
        VARCHAR CLAVE
        VARCHAR DESCRIPCION
    }

    TIPO_PROCESADOR_R_EAM_S3 {
        NUMERIC TIPO_PROCESADOR_ID PK
        VARCHAR CLAVE
        VARCHAR DESCRIPCION
    }

    TIPO_TARJETA_VIDEO_R_EAM_S3 {
        NUMERIC TIPO_TARJETA_VIDEO_ID PK
        VARCHAR CLAVE
        VARCHAR DESCRIPCION
    }

    TIPO_ALMACENAMIENTO_R_EAM_S3 {
        NUMERIC TIPO_ALMACENAMIENTO_ID PK
        VARCHAR CLAVE
        VARCHAR DESCRIPCION
    }

    TIPO_MONITOR_R_EAM_S3 {
        NUMERIC TIPO_MONITOR_ID PK
        VARCHAR CLAVE
        VARCHAR DESCRIPCION
    }

    SUCURSAL_F3_EAM_S3 ||--o| SUCURSAL_TALLER_F3_EAM_S3 : "Subtype"
    SUCURSAL_F3_EAM_S3 ||--o| SUCURSAL_VENTA_F3_EAM_S3 : "Subtype"
    SUCURSAL_TALLER_F3_EAM_S3 ||--o{ SERVICIO_LAPTOP_F3_EAM_S3 : "performs"
    TIPO_PROCESADOR_R_EAM_S3 ||--o{ LAPTOP_F3_EAM_S3 : "has"
    TIPO_TARJETA_VIDEO_R_EAM_S3 ||--o{ LAPTOP_F3_EAM_S3 : "has"
    TIPO_ALMACENAMIENTO_R_EAM_S3 ||--o{ LAPTOP_F3_EAM_S3 : "has"
    TIPO_MONITOR_R_EAM_S3 ||--o{ LAPTOP_F3_EAM_S3 : "has"
